--- a/.htaccess
+++ b/.htaccess
@@ -1,11 +1,12 @@
+# BEGIN WordPress
 <IfModule mod_rewrite.c>
 RewriteEngine On
 RewriteBase /
 RewriteRule ^index.php$ - [L]
-ewriteCond %{REQUEST_FILENAME} !-d
+RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
 RewriteRule . /index.php [L]
-RewriteRule ^dentist-details/([0-9+)/([0-9a-zA-Z_-]+) dentist-details.php?id=$1 [NC,L]
 </IfModule>
+# END WordPres
 
 Options -Indexes
